--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -20,17 +20,17 @@ services:
     volumes:
       - enunode-data-volume:/opt/enumivo/bin/data-dir
 
-  keosd:
+  enuwallet:
     image: enumivo/enumivo
-    command: /opt/enumivo/bin/keosd --wallet-dir /opt/enumivo/bin/data-dir
-    hostname: keosd
+    command: /opt/enumivo/bin/enuwallet --wallet-dir /opt/enumivo/bin/data-dir
+    hostname: enuwallet
     links:
       - enunoded
     volumes:
-      - keosd-data-volume:/opt/enumivo/bin/data-dir
+      - enuwallet-data-volume:/opt/enumivo/bin/data-dir
 
 volumes:
   enunode-data-volume:
     external: true
-  keosd-data-volume:
+  enuwallet-data-volume:
     external: true
