--- a/programs/CMakeLists.txt
+++ b/programs/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_subdirectory( enunode )
 add_subdirectory( enucli )
-add_subdirectory( keosd )
+add_subdirectory( enuwallet )
 add_subdirectory( enumivo-launcher )
 add_subdirectory( enumivo-applesedemo )
 add_subdirectory( enumivo-abigen )
