--- a/Docker/docker-compose-dawn3.0.yaml
+++ b/Docker/docker-compose-dawn3.0.yaml
@@ -1,10 +1,10 @@
 version: "3"
 
 services:
-  nodeosd:
+  enunoded:
     image: enumivo/enumivo:dawn3x
-    command: /opt/enumivo/bin/nodeosd.sh --data-dir /opt/enumivo/bin/data-dir
-    hostname: nodeosd
+    command: /opt/enumivo/bin/enunoded.sh --data-dir /opt/enumivo/bin/data-dir
+    hostname: enunoded
     ports:
       - 8888:8888
       - 9876:9876
@@ -18,7 +18,7 @@ services:
     command: /opt/enumivo/bin/enuwallet --wallet-dir /opt/enumivo/bin/data-dir
     hostname: enuwallet
     links:
-      - nodeosd
+      - enunoded
     volumes:
       - enuwallet-data-volume:/opt/enumivo/bin/data-dir
 
