--- a/Docker/docker-compose-dawn3.0.yaml
+++ b/Docker/docker-compose-dawn3.0.yaml
@@ -11,7 +11,7 @@ services:
     expose:
       - "8888"
     volumes:
-      - nodeos-data-volume:/opt/enumivo/bin/data-dir
+      - enunode-data-volume:/opt/enumivo/bin/data-dir
 
   enuwallet:
     image: enumivo/enumivo:dawn3x
@@ -23,7 +23,7 @@ services:
       - enuwallet-data-volume:/opt/enumivo/bin/data-dir
 
 volumes:
- nodeos-data-volume:
+ enunode-data-volume:
    external: true
  enuwallet-data-volume:
    external: true
