--- a/Docker/config.ini
+++ b/Docker/config.ini
@@ -44,7 +44,7 @@ p2p-listen-endpoint = 0.0.0.0:9876
 # p2p-peer-address =
 
 # The name supplied to identify this node amongst the peers.
-agent-name = "EOS Test Agent"
+agent-name = "ENU Test Agent"
 
 # True to always send full blocks, false to send block summaries
 send-whole-blocks = 1
@@ -79,7 +79,7 @@ required-participation = 33
 # producer-name =
 
 # Tuple of [public key, WIF private key] (may specify multiple times)
-private-key = ["EOS6MRyAjQq8ud7hVNYcfnVPJqcVpscN5So8BhtHuGYqET5GDW5CV","5KQwrPbwdL6PhXujxW37FSSQZ1JiwsST4cqQzDeyXtP79zkvFD3"]
+private-key = ["ENU6MRyAjQq8ud7hVNYcfnVPJqcVpscN5So8BhtHuGYqET5GDW5CV","5KQwrPbwdL6PhXujxW37FSSQZ1JiwsST4cqQzDeyXtP79zkvFD3"]
 
 # Plugin(s) to enable, may be specified multiple times
 # plugin =
